--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   auto_route: ^7.8.4
   shared_preferences: ^2.1.1
   flutter_secure_storage: ^8.0.0
+  permission_handler: ^11.0.1
 
   # UI
   lottie: ^2.3.2
