--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ dependencies:
   mobx: ^2.2.0
   flutter_mobx: ^2.0.6+5
   get_it: ^7.6.4
+  injectable: ^2.3.1
   auto_route: ^7.8.4
   shared_preferences: ^2.1.1
   flutter_secure_storage: ^8.0.0
@@ -46,6 +47,7 @@ dependencies:
   equatable: ^2.0.5
   image_picker: ^0.8.7+5
   jwt_decoder: ^2.0.1
+  dartz: ^0.10.1
 
 dev_dependencies:
   flutter_test:
@@ -64,6 +66,7 @@ dev_dependencies:
   mobx_codegen: ^2.4.0
   copy_with_extension_gen: ^5.0.4
   auto_route_generator: ^7.3.2
+  injectable_generator: ^2.4.0
 
   # Tests
   mockito: ^5.4.2
