--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   shared_preferences: ^2.1.1
   flutter_secure_storage: ^8.0.0
   permission_handler: ^11.0.1
+  platform: ^3.1.3
 
   # UI
   lottie: ^2.3.2
@@ -71,6 +72,8 @@ dev_dependencies:
   # Tests
   mockito: ^5.4.2
   covadge: ^0.0.1
+  permission_handler_platform_interface: ^3.11.5
+  plugin_platform_interface: ^2.1.6
 
   # UI
   flutter_launcher_icons: ^0.13.1
