--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -53,7 +53,7 @@ definitions:
         firebase logout || true
         echo ${FIREBASE_SA_KEY} | base64 -d > ${GOOGLE_APPLICATION_CREDENTIALS}
         
-        firebase use $FIREBASE_PROJECT_ID
+        firebase use ${FIREBASE_PROJECT_ID}
         firebase deploy --only hosting
 workflows:
   stg-build:
