--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -126,7 +126,7 @@ workflows:
         # set up local properties
         echo "flutter.sdk=$HOME/programs/flutter" > "$FCI_BUILD_DIR/android/local.properties"
       - cd $FLUTTER_ROOT/; git checkout $FLUTTER_FIXED_VERSION
-      - flutter packages pub get
+      - flutter pub get
       - flutter pub run build_runner build --delete-conflicting-outputs
       - flutter analyze
       - flutter test -r expanded
@@ -169,7 +169,7 @@ workflows:
         # set up local properties
         echo "flutter.sdk=$HOME/programs/flutter" > "$FCI_BUILD_DIR/android/local.properties"
       - cd $FLUTTER_ROOT/; git checkout $FLUTTER_FIXED_VERSION
-      - flutter packages pub get
+      - flutter pub get
       - flutter pub run build_runner build --delete-conflicting-outputs
       - flutter analyze
       - flutter test
