--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,7 +8,7 @@ version: 1.0.0+1
 environment:
   flutter: ">=3.10.3 <4.0.0"
   sdk: ">=3.0.3 <4.0.0"
-  
+
 dependencies:
   flutter:
     sdk: flutter
@@ -76,6 +76,8 @@ dev_dependencies:
   # UI
   flutter_launcher_icons: ^0.13.1
   flutter_native_splash: ^2.3.3
+dependency_overrides:
+  collection: ^1.17.1
 
 flutter:
   uses-material-design: true
