--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -90,7 +90,7 @@ workflows:
       - *firebase-app-distribution-upload
       - *firebase-hosting-upload-pwa
     artifacts:
-      - build/**/outputs/bundle/**/*.aab
+      - build/**/outputs/bundle/**/*.apk
       - build/**/outputs/**/mapping.txt
       - /tmp/xcodebuild_logs/*.log
       - '*.snap'
@@ -129,18 +129,18 @@ workflows:
       - flutter pub run build_runner build --delete-conflicting-outputs
       - flutter analyze
       - flutter test -r expanded
-      - flutter build appbundle --release --flavor prod -t lib/main_prod.dart --build-number=$(($PROJECT_BUILD_NUMBER + $BASE_BUILD_NUMBER)) --obfuscate --split-debug-info=debug-info-android/
+      - flutter build apk --release --flavor prod -t lib/main_prod.dart --build-number=$(($PROJECT_BUILD_NUMBER + $BASE_BUILD_NUMBER)) --obfuscate --split-debug-info=debug-info-android/
       - flutter build web --release -t lib/main_prod.dart
       - zip -r debug-info-android.zip debug-info-android
       - name: Create GitHub Release
         script: |
           FLUTTER_APP_VERSION=`grep 'version:' pubspec.yaml | awk '{split($0,a,"version: "); split(a[2],b,"+"); print b[1]}'`
           FLUTTER_APP_BUILD_NUMBER=$(($PROJECT_BUILD_NUMBER + $BASE_BUILD_NUMBER))
-          gh release create v${FLUTTER_APP_VERSION}_${FLUTTER_APP_BUILD_NUMBER} --generate-notes --target main build/app/outputs/bundle/prodRelease/app-prod-release.aab build/app/outputs/mapping/prodRelease/mapping.txt debug-info-android.zip
+          gh release create v${FLUTTER_APP_VERSION}_${FLUTTER_APP_BUILD_NUMBER} --generate-notes --target main build/app/outputs/flutter-apk/app-stg-release.apk build/app/outputs/mapping/prodRelease/mapping.txt debug-info-android.zip
       - *firebase-app-distribution-upload
       - *firebase-hosting-upload-pwa
     artifacts:
-      - build/**/outputs/bundle/**/*.aab
+      - build/**/outputs/bundle/**/*.apk
       - build/**/outputs/**/mapping.txt
       - /tmp/xcodebuild_logs/*.log
       - '*.snap'
@@ -171,7 +171,6 @@ workflows:
       - flutter analyze
       - flutter test
     artifacts:
-      - build/**/outputs/bundle/**/*.aab
       - build/**/outputs/**/mapping.txt
       - '*.snap'
       - flutter_drive.log
